# plutus-hello

./: default.nix  flake.nix  plutus-hello.cabal
nix/haskell/: default.nix  plan-sha256  tools.nix
nix/haskell/materialized/: default.nix
nix/haskell/materialized/.plan.nix/: plutus-hello.nix
src/Plutus/Contracts/: Hello.hs
