cabal-version: 2.4
name:          plutus-hello
version:       0.1.0.0
author:        Your name
maintainer:    Your email

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language: Haskell2010
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  -- See Plutus Tx readme
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          lang
  exposed-modules: Plutus.Contracts.Hello
  build-depends:
    , aeson
    , base              >=4.9 && <5
    , bytestring
    , containers
    , plutus-contract
    , plutus-ledger
    , plutus-tx
    , plutus-tx-plugin

  hs-source-dirs:  src
